--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -6103,8 +6103,8 @@ button:focus {
   margin-top: 30px;
 }
 #portfolio .single-portfolio .main-photo img {
-  width: 100%;
-  height: 100%;
+  width : 500px;
+  height: 500px;
 }
 #portfolio .single-portfolio .single-portfolio-description {
   position: relative;
